[ALLI-3801] Prevent form submission on Safari if it's invalid and fall back to JS-based validation if the browser doesn't support form validation. Fix invalid HTML. Fix within range validation in the sidebar for IE. Fix clicking the advanced search slider and make sure change event is fired for the inputs.

--- a/themes/finna/less/bootstrap/forms.less
+++ b/themes/finna/less/bootstrap/forms.less
@@ -150,6 +150,10 @@ output {
   &:invalid {
     box-shadow: 0 0 2px 1px rgba(255, 0, 0, 0.9);
   }
+  // This is for IE. Keep separate from :invalid so that IE does not drop it
+  &.invalid {
+    box-shadow: 0 0 2px 1px rgba(255, 0, 0, 0.9);
+  }
 }
 
 
